with peivacy policy

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,17 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  cursor: url('/brahmakosh-logo.png') 24 24, auto;
+}
+
+/* Custom cursor for clickable elements */
+a, button, [role="button"], input[type="button"], input[type="submit"], input[type="reset"] {
+  cursor: url('/brahmakosh-logo.png') 24 24, pointer !important;
+}
+
+/* Input and textarea should use text cursor */
+input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="tel"], input[type="url"], textarea, select {
+  cursor: url('/brahmakosh-logo.png') 24 24, text !important;
 }
 
 #root {
